--- a/.github/workflows/ktlintcheck_and_test.yml
+++ b/.github/workflows/ktlintcheck_and_test.yml
@@ -3,9 +3,10 @@ name: test
 on:
   pull_request:
     branches: [ "master" ]
+  workflow_dispatch:
 
 jobs:
-  checkout:
+  checkout_and_build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -20,8 +21,17 @@ jobs:
     - name: Build
       run: ./gradlew build
     
+  ktlintcheck:
+    runs-on: ubuntu-latest
+    needs: checkout_and_build
+    steps:
     - name: ktlintCheck
       run: ./gradlew ktlintCheck
-    
+
+  test:
+    runs-on: ubuntu-latest
+    needs: checkout_and_build
+    steps:
     - name: Test
       run: ./gradlew test
+  
