--- a/.github/workflows/ktlintcheck_and_test.yml
+++ b/.github/workflows/ktlintcheck_and_test.yml
@@ -6,14 +6,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  checkout_and_setup:
+  linter_and_test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: 11
+        java-version: 17
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     
